minio/minio-service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: minio
#   namespace: minio-operators
# spec:
#   selector:
#     app: minio
#   ports:
#     - name: console
#       port: 80
#       targetPort: 9090
#     - name: s3
#       port: 80
#       targetPort: 9000
#   type: ClusterIP


apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio-operators
spec:
  selector:
    app: minio
  ports:
    - name: console
      port: 80
      targetPort: 9090
    - name: s3
      port: 80
      targetPort: 9000
  type: ClusterIP
