minio/mino-ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minio-ingress
#   namespace: minio-operators
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/proxy-body-size: "0"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/proxy-set-headers: |
#       {
#         "Host": "$host",
#         "X-Real-IP": "$remote_addr",
#         "X-Forwarded-For": "$proxy_add_x_forwarded_for",
#         "X-Forwarded-Host": "$host",
#         "X-Forwarded-Port": "$server_port",
#         "X-Forwarded-Proto": "$scheme",
#         "X-Scheme": "$scheme"
#       }
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: kd.itversity.com
#     http:
#       paths:
#       - path: /minio(/|$)(.*)
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: minio
#             port:
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-operators
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kd.itversity.com
    http:
      paths:
      - path: /minio(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio
            port:
              number: 80
      - path: /minio/
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 80
  tls:
  - hosts:
    - kd.itversity.com
    secretName: itversity-tls




# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minio-ingress
#   namespace: minio-operators
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/proxy-body-size: "0"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: kd.itversity.com
#     http:
#       paths:
#       - path: /minio(/|$)(.*)
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: minio
#             port:
#               number: 80
#   tls:
#   - hosts:
#     - kd.itversity.com
#     secretName: itversity-tls
